Fixed search tags scroll capability on small screens

--- a/site/assets/sass/style.scss
+++ b/site/assets/sass/style.scss
@@ -1150,7 +1150,7 @@ textarea {
     background: var(--color-background-main);
     border-radius: 4px;
     box-shadow: 0 8px 24px -2px rgba(0, 0, 0, 0.4);
-    overflow: hidden;
+    overflow: scroll;
 
     @media only screen and (max-width: $breakpoint-large) {
         top: 6rem;
